<resources>
    <string name="app_name">chatapplication</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="unsuccessful_exception">Operation Cannot be complete at moment. Please Try again Later</string>
    <string name="txtDelete">Delete</string>
    <string name="txtHintChat">Type message...</string>
    <string name="txt_record">RECORD</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_forgot_password_loading">Forgot Password...</string>
    <string name="title_create_user_loading">Sending Data...</string>
    <string name="title_getting_data_loading">Getting Data...</string>
    <string name="title_progress_dialog_searching">Search State and city....</string>
    <string name="title_login_loading">Login...</string>
    <string name="title_deleting_notifications">Deleting Notifications...</string>
    <string name="title_please_wait">Please Wait...</string>
    <string name="title_fetching_tickets">Fetching Tickets...</string>
    <string name="title_fetching_ticket_info">Fetching Ticket Info...</string>
    <string name="title_fetching_properties">Fetching Properties...</string>
    <string name="title_fetching_property_info">Fetching Property Information...</string>
    <string name="title_deleting_property">Deleting Property...</string>
    <string name="title_adding_property">Adding Property...</string>
    <string name="title_updating_property">Updating Property Information...</string>
    <string name="title_searching">Searching...</string>
    <string name="title_deleting_vendor">Deleting Vendor...</string>
    <string name="title_inviting_vendor">Inviting Vendor...</string>
    <string name="title_adding_vendor_type">Adding Vendor Type...</string>
    <string name="title_assign_property_tovendor">Assigning Property to Vendor...</string>
    <string name="title_updating_personal_info">Updating Personal Information...</string>
    <string name="title_registering">Registering...</string>
    <string name="title_updateing_sequrity_info">Updating Sequrity Information...</string>
    <string name="title_changing_password">Changing Password...</string>
    <string name="title_logout">Logout...</string>
    <string name="title_accepting_ticket">Accepting ticket...</string>
    <string name="title_invite_client">Invite Client...</string>
    <string name="title_creating_ticket">Creating Ticket...</string>
    <string name="permission_audio_disallow">You need to accept the audio permission for Recording audio</string>
    <string name="permission_audio_must_include_text">You need to accept the audio permission for Recording audio. On pressing "OK". App will Redirect you to app Setting</string>
    <string name="dilog_title_confirmation">Confirmation Required</string>
    <string name="dilog_tilte_alert">Vendor Crush</string>
    <string name="dilog_title_success">Success</string>
    <string name="alert_ticket_close">Do you want to cancel ticket ?</string>
    <string name="txt_read_staus_sending">sending</string>
    <string name="txt_read_staus_sent">sent</string>
    <string name="txt_read_staus_received">read</string>
    <string name="title_activity_login">Sign in</string>
    <string name="txt_keep_me_login">Keep me logged in</string>
    <string name="txt_sign_in">SIGN IN</string>
    <string name="txt_forgot_pwd">Forgot Password?</string>
    <string name="txt_email_mobile">E-mail or mobile number</string>
    <string name="txt_sign_up_caps">SIGN UP</string>
    <string name="txt_email_pwd_mismatch">Email id and password mismatch!</string>
    <string name="login_password_hint">Password*</string>
    <string name="login_password_label">PASSWORD</string>
    <string name="txt_sign_up">Sign up</string>
    <string name="txt_sign_up_acceptance">Acceptance for user agreement</string>
    <string name="txt_sign_up_email_terms_acceptance">Email me Terms and Conditions</string>
    <string name="txt_sequrity_description">The questions below will be used to help you log in to your account if you forgot your password.</string>
    <string name="txt_fb_sign_up">Log in with Facebook</string>
    <string name="txt_gp_sign_up">Log in with Google</string>
    <string name="txt_home_owner">Home Owner</string>
    <string name="txt_property_manager">Property Manager</string>
    <string name="txt_property_manager_caps">PROPERTY MANAGER</string>
    <string name="txt_home_owner_caps">HOME OWNER</string>
    <string name="txt_invite_client">Invite Client</string>
    <string name="txt_tenant">Tenant</string>
    <string name="txt_vendor">Vendor</string>
    <string name="txt_vendor_caps">VENDOR</string>
    <string name="txt_vendors">Vendors</string>
    <string name="txt_tenants">Tenants</string>
    <string name="txt_home_owner_role">home_owner</string>
    <string name="txt_property_manager_role">property_manager</string>
    <string name="txt_vendor_role">vendor</string>
    <string name="txt_as">As</string>
    <string name="txt_plumbing">Plumbing</string>
    <string name="txt_electrical">Electrical</string>
    <string name="txt_landscaping">Landscaping</string>
    <string name="txt_carpentry">Carpentry</string>
    <string name="txt_cleaning">Cleaning</string>
    <string name="txt_decks_and_porches">Deck &amp; Porches</string>
    <string name="txt_drywall_and_insulation">Drywall &amp; Insulation</string>
    <string name="txt_heating_and_cooling">Heating &amp; Cooling</string>
    <string name="txt_painting">Painting</string>
    <string name="txt_rooting">Roofing</string>
    <string name="txt_swimming_pools_and_spas">Pool &amp; Spas</string>
    <string name="txt_general">General</string>
    <string name="txt_name">NAME</string>
    <string name="txt_edit_info">Edit your personal information in the fields below, then press \"Save\" to save changes.</string>
    <string name="txt_first_name">First Name*</string>
    <string name="txt_first_name_na">First Name</string>
    <string name="txt_last_name">Last Name*</string>
    <string name="txt_dob">DOB*</string>
    <string name="txt_last_name_na">Last Name</string>
    <string name="txt_zip_code_label">ZIP CODE</string>
    <string name="txt_zip_code">Zip Code*</string>
    <string name="txt_zip_code_na">Zip Code</string>
    <string name="txt_email">E-MAIL</string>
    <string name="txt_address">Address</string>
    <string name="txt_primary_email">Primary E-mail*</string>
    <string name="txt_confirm_primary_email">Confirm Email*</string>
    <string name="txt_alternate_email">Alternate E-mail</string>
    <string name="txt_phone_lebel">Phone</string>
    <string name="txt_phone">PHONE</string>
    <string name="txt_phone_not_mandatory">Phone</string>
    <string name="txt_primary_phone">Primary Phone*</string>
    <string name="txt_alternate_phone">Alternate Phone</string>
    <string name="txt_role">YOUR ROLE*</string>
    <string name="txt_role_camel_case">Your Role*</string>
    <string name="txt_property_name">Property Name*</string>
    <string name="txt_property_name_cap">PROPERTY NAME</string>
    <string name="txt_property_address_cap">PROPERTY ADDRESS</string>
    <string name="txt_street_address">Street Address*</string>
    <string name="txt_address_line2">Address Line 2</string>
    <string name="txt_address_line_text">Address Line 1*</string>
    <string name="txt_address_line_text_na">Address Line 1</string>
    <string name="txt_city">City*</string>
    <string name="txt_city_na">City</string>
    <string name="txt_state">State*</string>
    <string name="txt_state_na">State</string>
    <string name="txt_country">Country*</string>
    <string name="txt_country_na">Country</string>
    <string name="txt_select_one">(Select atleast one)</string>
    <string name="txt_retype_pwd">Confirm Password*</string>
    <string name="txt_security_question_one">SECURITY QUESTION 1</string>
    <string name="txt_security_question_two">SECURITY QUESTION 2</string>
    <string name="txt_security_question_three">SECURITY QUESTION 3</string>
    <string name="txt_next">Next</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_select_question">Select Question</string>
    <string name="txt_answer">Answer</string>
    <string name="email_id_warning">Please enter email id.</string>
    <string name="email_id_valid_warning">Please enter valid email id.</string>
    <string name="email_id_same_valid_warning">primary and secondary emails cannot be same.</string>
    <string name="password_warning">Please enter password.</string>
    <string name="password_didnot_match_warning">Password didn\'t match.</string>
    <string name="password_confirm">Confirm New Password* </string>
    <string name="password_new">New Password*</string>
    <string name="network_error_message">Network not available</string>
    <string name="network_error_title">Vendor Crush</string>
    <string name="login_loading_mesage">Checking the credentials...</string>
    <string name="confirm_new_pswd_not_same">New password and confirm Password not same</string>
    <string name="old_new_pswd_same">New and old password is same</string>
    <string name="alert_space_not_allowed">Space is not allowed</string>
    <string name="alter_passwd_length">Password length should be greater than 4</string>
    <string name="fetch_property_mesage">Fetching Properties...</string>
    <string name="add_property_mesage">Adding property...</string>
    <string name="delete_property_mesage">Deleting property...</string>
    <string name="edit_property_mesage">Editing property...</string>
    <string name="select_question_one">Select Question1*</string>
    <string name="select_question_two">Select Question2*</string>
    <string name="select_question_three">Select Question3*</string>
    <string name="select_user_role">Role*</string>
    <string name="first_name_warning">Please enter first name.</string>
    <string name="last_name_warning">Please enter last name.</string>
    <string name="primary_email_warning">Please enter primary email id.</string>
    <string name="confirm_email_warning">Please enter confirm email id.</string>
    <string name="confirm_email_not_similar_warning">primary email and confirm email ids are not same.</string>
    <string name="zip_code_warning">Please enter Zip code with length 5.</string>
    <string name="country_warning">Please enter country name</string>
    <string name="primary_phone_warning">Please enter primary phone number with length 10.</string>
    <string name="phone_warning">Please enter phone number with length 10.</string>
    <string name="select_atleast_one_role_warning">Please select atleast one role.</string>
    <string name="select_atleast_one_speciality_warning">Please select atleast one speciality for vendor.</string>
    <string name="select_useragreement_warning">Please select user agreement.</string>
    <string name="enter_valid_email">Please Enter Valid Email.</string>
    <string name="securit_answer_warning">Please enter an answer for the selected question.</string>
    <string name="securit_question_warning">Please select question.</string>
    <string name="txt_email_not_found">Unable to fetch email id.</string>
    <string name="txt_reg_email_id">"Enter registered Email id"</string>
    <string name="txt_password">Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
</resources>